# fontdue-sdl2

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
examples/: basic.rs  testbed.rs
src/: lib.rs  public_api.rs  public_api_no_lifetimes.rs  rect_allocator.rs
