[package]
name = "fontdue-sdl2"
version = "0.3.3-alpha.0"
authors = ["Jens Pitkanen <jens@neon.moe>"]
edition = "2018"
description = "A glue crate between fontdue and sdl2"
license = "MIT"
repository = "https://github.com/neonmoe/fontdue-sdl2"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
# If either of these is out-of-date, please open an issue.
sdl2 = "^0.37"
fontdue = "^0.9"

log = "^0.4.14"

[features]
unsafe_textures = ["sdl2/unsafe_textures"]

[dev-dependencies]
env_logger = "^0.8.3"
